-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u341, jfx19
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8285995 | jfx17.0.4 | Ambarish Rapte | P2 | Resolved | Fixed | |
| JDK-8284820 | 8u341 | Dukebot | P2 | Closed | Fixed | b03 |
| JDK-8285859 | jfx11.0.16 | Ambarish Rapte | P2 | Resolved | Fixed |
To reproduce this:
1. Run the following:
java HelloWebView https://us.yahoo.com/
2. Hover over the blue "Yahoo!" logo in the upper right of the page.
BUG: This will crash with the following stack track
Crashed Thread: 0 Dispatch queue: com.apple.main-thread
Exception Type: EXC_BREAKPOINT (SIGTRAP)
Exception Codes: 0x0000000000000002, 0x0000000000000000
Exception Note: EXC_CORPSE_NOTIFY
Termination Reason: Namespace SIGNAL, Code 5 Trace/BPT trap: 5
Terminating Process: exc handler [72034]
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
0 libjfxwebkit.dylib 0x13f7da955 WebCore::GraphicsContextJava::drawLinesForText(WebCore::FloatPoint const&, float, WTF::Vector<double, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, bool, bool, WebCore::StrokeStyle) + 453
See the attached crash report for a complete stack trace.
If I locally revert the fix for
- backported by
-
JDK-8285859 Crash in GraphicsContextJava::drawLinesForText on https://us.yahoo.com/
-
- Resolved
-
-
JDK-8285995 Crash in GraphicsContextJava::drawLinesForText on https://us.yahoo.com/
-
- Resolved
-
-
JDK-8284820 Crash in GraphicsContextJava::drawLinesForText on https://us.yahoo.com/
-
- Closed
-
- relates to
-
JDK-8280020 Underline and line-through not straight in WebView
-
- Resolved
-
- links to
-
Commit
openjdk/jfx11u/f8d4b48b
-
Commit
openjdk/jfx17u/13ca8ee8
-
Commit
openjdk/jfx/64da125f
-
Review
openjdk/jfx11u/92
-
Review
openjdk/jfx17u/51
-
Review
openjdk/jfx/765