8284184: Crash in GraphicsContextJava::drawLinesForText on https://us.yahoo.com